@@ -1,3 +1,8 @@
+2007-05-25  Brian Bidulock  <bidulock@openss7.org>
+
+	* src/modules/x400p-ss7/v401p.c: check for pm_message_t
+	* src/util/slmon.c: compiler warning
+
 2007-05-18  Brian Bidulock  <bidulock@openss7.org>
 
 	* AUTHORS: updates for release
